{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 45,
  "lineage": "79f3da9b-a7d9-d166-203e-cbcdeff6f96a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000d161e126215d29",
            "arn": "arn:aws:ec2:us-west-1:342597974367:elastic-ip/eipalloc-000d161e126215d29",
            "domain": "vpc",
            "id": "eipalloc-000d161e126215d29",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-9-125-68.us-west-1.compute.amazonaws.com",
            "public_ip": "52.9.125.68",
            "public_ipv4_pool": "amazon",
            "region": "us-west-1",
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-nat-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-nat-eip-1"
            }
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ea97fd1d89aec3c",
            "arn": "arn:aws:ec2:us-west-1:342597974367:elastic-ip/eipalloc-02ea97fd1d89aec3c",
            "domain": "vpc",
            "id": "eipalloc-02ea97fd1d89aec3c",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-9-73-136.us-west-1.compute.amazonaws.com",
            "public_ip": "52.9.73.136",
            "public_ipv4_pool": "amazon",
            "region": "us-west-1",
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-nat-eip-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-nat-eip-2"
            }
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:internet-gateway/igw-0cf61eb3b041484fe",
            "id": "igw-0cf61eb3b041484fe",
            "owner_id": "342597974367",
            "region": "us-west-1",
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-igw"
            },
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:342597974367:loadbalancer/app/evtmgmt-synth25648139-alb/740edb7cb8865286",
            "arn_suffix": "app/evtmgmt-synth25648139-alb/740edb7cb8865286",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "evtmgmt-synth25648139-alb-1965009935.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:342597974367:loadbalancer/app/evtmgmt-synth25648139-alb/740edb7cb8865286",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "evtmgmt-synth25648139-alb",
            "preserve_host_header": false,
            "region": "us-west-1",
            "security_groups": [
              "sg-0f643d146544c6584"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c2a9ec3881264ad4"
              },
              {
                "subnet_id": "subnet-0ffaef635fd255d65"
              }
            ],
            "subnets": [
              "subnet-0c2a9ec3881264ad4",
              "subnet-0ffaef635fd255d65"
            ],
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-alb"
            },
            "vpc_id": "vpc-0d207d053f36aa4e9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:342597974367:listener/app/evtmgmt-synth25648139-alb/740edb7cb8865286/babb5d24e0a9ad48",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:342597974367:targetgroup/evtmgmt-synth25648139-tg/1f36d80ee788e222",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:342597974367:listener/app/evtmgmt-synth25648139-alb/740edb7cb8865286/babb5d24e0a9ad48",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:342597974367:loadbalancer/app/evtmgmt-synth25648139-alb/740edb7cb8865286",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:342597974367:targetgroup/evtmgmt-synth25648139-tg/1f36d80ee788e222",
            "arn_suffix": "targetgroup/evtmgmt-synth25648139-tg/1f36d80ee788e222",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:342597974367:targetgroup/evtmgmt-synth25648139-tg/1f36d80ee788e222",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "evtmgmt-synth25648139-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000d161e126215d29",
            "association_id": "eipassoc-07c2c2c475f221eb2",
            "connectivity_type": "public",
            "id": "nat-0d754e8ad2ef80618",
            "network_interface_id": "eni-0ce3d25131dbc6c81",
            "private_ip": "10.110.0.33",
            "public_ip": "52.9.125.68",
            "region": "us-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c2a9ec3881264ad4",
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ea97fd1d89aec3c",
            "association_id": "eipassoc-00611f94143016111",
            "connectivity_type": "public",
            "id": "nat-0d53c1b80a8d8bf4e",
            "network_interface_id": "eni-02311b59e0dd2f1e0",
            "private_ip": "10.110.1.126",
            "public_ip": "52.9.73.136",
            "region": "us-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ffaef635fd255d65",
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-nat-gateway-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-nat-gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:route-table/rtb-042e056cf9f7976e6",
            "id": "rtb-042e056cf9f7976e6",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d754e8ad2ef80618",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-private-rt-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:route-table/rtb-0e602bf86bcba4cc2",
            "id": "rtb-0e602bf86bcba4cc2",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d53c1b80a8d8bf4e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-private-rt-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:route-table/rtb-05418966f7ec15688",
            "id": "rtb-05418966f7ec15688",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf61eb3b041484fe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acceed138888e3bc",
            "region": "us-west-1",
            "route_table_id": "rtb-042e056cf9f7976e6",
            "subnet_id": "subnet-05d7b1df9615e9292"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c2a17d6f488959f",
            "region": "us-west-1",
            "route_table_id": "rtb-0e602bf86bcba4cc2",
            "subnet_id": "subnet-0c146b2fcad21e55a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f41d396440c8d22",
            "region": "us-west-1",
            "route_table_id": "rtb-05418966f7ec15688",
            "subnet_id": "subnet-0c2a9ec3881264ad4"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022f9eaed24c76c6e",
            "region": "us-west-1",
            "route_table_id": "rtb-05418966f7ec15688",
            "subnet_id": "subnet-0ffaef635fd255d65"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:security-group/sg-0f643d146544c6584",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f643d146544c6584",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "evtmgmt-synth25648139-alb-sg",
            "name_prefix": "",
            "owner_id": "342597974367",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-alb-sg",
              "Tier": "web"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-alb-sg",
              "Tier": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:security-group/sg-002a6ef1bb2122e88",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002a6ef1bb2122e88",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f643d146544c6584"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f643d146544c6584"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "evtmgmt-synth25648139-ec2-sg",
            "name_prefix": "",
            "owner_id": "342597974367",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-ec2-sg",
              "Tier": "api"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-ec2-sg",
              "Tier": "api"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:subnet/subnet-05d7b1df9615e9292",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.110.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d7b1df9615e9292",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-private-subnet-1",
              "Type": "private"
            },
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:subnet/subnet-0c146b2fcad21e55a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.110.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c146b2fcad21e55a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-private-subnet-2",
              "Type": "private"
            },
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:subnet/subnet-0c2a9ec3881264ad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.110.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2a9ec3881264ad4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-public-subnet-1",
              "Type": "public"
            },
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:subnet/subnet-0ffaef635fd255d65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.110.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffaef635fd255d65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-public-subnet-2",
              "Type": "public"
            },
            "vpc_id": "vpc-0d207d053f36aa4e9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:342597974367:vpc/vpc-0d207d053f36aa4e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/16",
            "default_network_acl_id": "acl-0d68a13fd2b4bbd0e",
            "default_route_table_id": "rtb-04089b6a93dc80a56",
            "default_security_group_id": "sg-03d381a500eeddceb",
            "dhcp_options_id": "dopt-073e05dc3a8a38ee3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d207d053f36aa4e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04089b6a93dc80a56",
            "owner_id": "342597974367",
            "region": "us-west-1",
            "tags": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "evtmgmt-synth25648139-vpc"
            }
          }
        }
      ]
    }
  ]
}